--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1> Hello World </h1>
-        <p> I'm hosted with Github Pages </p>p>
+        <h1> Hey everyone, it's me, Simran B! </h1>
+        <p> I'm so glad you are here! </p>
+        <p> About Me: Student at Rutgers University- New Brunswick </p>
+        <p> Major: Business Analytics & Information Technology (BAIT)</p>
+        <p> Minor: Economics </p>
+        <img src=img/simran.jpg> 
     </body>
 </html>
