--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <p> About Me: Student at Rutgers University- New Brunswick </p>
         <p> Major: Business Analytics & Information Technology (BAIT)</p>
         <p> Minor: Economics </p>
+        <p> What's up everyone?? </p>
         <img src=img/simran.jpg> 
     </body>
 </html>
